add new event in plugin

--- a/core/components/modretailcrm/docs/changelog.txt
+++ b/core/components/modretailcrm/docs/changelog.txt
@@ -6,3 +6,12 @@
 ==============
 - Базовая версия 2.0. 
 - Полностью переписанный компонент
+
+2.1.0 - (1.06.2018)
+==============
+- Отключена передача способа доставки и оплаты и за ошибки на стороне RetailCRM
+- Исправлена передача общей стоимости нескольки разных тоаров
+- Добавлена передача стоимости доставки
+- Добавлена передача веса товара
+- Добавлено разбинение Строки ФИО на отдельные поля
+- Добавлена проверка на существование пользователя на стороне RetailCRM
