--- a/core/components/modretailcrm/docs/changelog.txt
+++ b/core/components/modretailcrm/docs/changelog.txt
@@ -15,3 +15,8 @@
 - Добавлена передача веса товара
 - Добавлено разбинение Строки ФИО на отдельные поля
 - Добавлена проверка на существование пользователя на стороне RetailCRM
+
+2.2.0 - (10.06.2018)
+==============
+- В объект msDelivery, добавлено дополнительное поле retailcrm_delivery_code, позволяющее указать символьный код доставки из настроек retailCRM, что дает возможность передавать способ доставки при заказе.
+- В объект msPayment, добавлено дополнительное поле retailcrm_payment_code, позволяющее указать символьный код способа оплаты из настроек retailCRM, что дает возможность передавать способ оплаты при заказе.
