--- a/core/components/modretailcrm/docs/changelog.txt
+++ b/core/components/modretailcrm/docs/changelog.txt
@@ -20,3 +20,8 @@
 ==============
 - В объект msDelivery, добавлено дополнительное поле retailcrm_delivery_code, позволяющее указать символьный код доставки из настроек retailCRM, что дает возможность передавать способ доставки при заказе.
 - В объект msPayment, добавлено дополнительное поле retailcrm_payment_code, позволяющее указать символьный код способа оплаты из настроек retailCRM, что дает возможность передавать способ оплаты при заказе.
+
+
+2.2.1 - (11.06.2018)
+==============
+- В выгрузку заказов добавлен передача способа доставки и способа оплаты
