change history file

--- a/core/components/modretailcrm/docs/changelog.txt
+++ b/core/components/modretailcrm/docs/changelog.txt
@@ -1,11 +1,19 @@
 История modRetailCRM
 
-
-
-2.0.0-beta - (19.11.2017)
+2.2.2 - (23.08.2018)
 ==============
-- Базовая версия 2.0. 
-- Полностью переписанный компонент
+- Исправлена ошибка разбиения имени на ФИО
+- Добавлена подсказка для получения модификаций msOptionsPrice
+
+2.2.1 - (11.06.2018)
+==============
+- В выгрузку заказов добавлен передача способа доставки и способа оплаты
+
+2.2.0 - (10.06.2018)
+==============
+- В объект msDelivery, добавлено дополнительное поле retailcrm_delivery_code, позволяющее указать символьный код доставки из настроек retailCRM, что дает возможность передавать способ доставки при заказе.
+- В объект msPayment, добавлено дополнительное поле retailcrm_payment_code, позволяющее указать символьный код способа оплаты из настроек retailCRM, что дает возможность передавать способ оплаты при заказе.
+
 
 2.1.0 - (1.06.2018)
 ==============
@@ -16,12 +24,7 @@
 - Добавлено разбинение Строки ФИО на отдельные поля
 - Добавлена проверка на существование пользователя на стороне RetailCRM
 
-2.2.0 - (10.06.2018)
+2.0.0-beta - (19.11.2017)
 ==============
-- В объект msDelivery, добавлено дополнительное поле retailcrm_delivery_code, позволяющее указать символьный код доставки из настроек retailCRM, что дает возможность передавать способ доставки при заказе.
-- В объект msPayment, добавлено дополнительное поле retailcrm_payment_code, позволяющее указать символьный код способа оплаты из настроек retailCRM, что дает возможность передавать способ оплаты при заказе.
-
-
-2.2.1 - (11.06.2018)
-==============
-- В выгрузку заказов добавлен передача способа доставки и способа оплаты
+- Базовая версия 2.0. 
+- Полностью переписанный компонент
