add string to changelog

--- a/core/components/modretailcrm/docs/changelog.txt
+++ b/core/components/modretailcrm/docs/changelog.txt
@@ -1,4 +1,7 @@
 История modRetailCRM
+2.2.3 - (16.08.2018)
+==============
+- Исправлена ошибка с падением сайта при заполненном API KEY и пустом URL CRM
 
 2.2.2 - (23.08.2018)
 ==============
